--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ verify_ssl = true
 sphinx = "*"
 sphinxawesome-theme = "*"
 sphinx-sitemap = "*"
+myst-parser = "*"
+# sphinx-design = "*"
 rstdoc = "*"
 pre-commit = "*"
 
