--- a/.github/workflows/sphinx_to_pages.yml
+++ b/.github/workflows/sphinx_to_pages.yml
@@ -23,7 +23,7 @@ jobs:
         uses: pre-commit/action@v3.0.0
 
       - name: Install dependencies 🔧
-        run: pip3 install sphinx sphinxawesome-theme sphinx-sitemap
+        run: pip3 install sphinx sphinxawesome-theme sphinx-sitemap myst-parser
 
       - name: Build and Commit 🧱
         uses: sphinx-notes/pages@v2
