--- a/.github/workflows/sphinx_to_pages.yml
+++ b/.github/workflows/sphinx_to_pages.yml
@@ -4,10 +4,15 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_call:
 
 jobs:
-  build:
+  run-qa-tests:
+    uses: ./.github/workflows/qa_test.yml
+  build-pages:
     runs-on: ubuntu-latest
+    needs:
+      - run-qa-tests
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -18,24 +23,12 @@ jobs:
 
       - name: Set up Python 🐍
         uses: actions/setup-python@v4
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # otherwise, you will fail to push refs to dest repo
-
-      - name: Install dependencies 🔧
-        uses: VaultVulp/action-pipenv@v2.0.1
-        with:
-          command: install
 
       - name: Run Pre-Commit Tests 🧪
         uses: pre-commit/action@v3.0.0
 
       - name: Build and Commit 🧱
         uses: sphinx-notes/pages@v3
-        with:
-          sphinx_version: "6.2.1"
-          checkout: false
 
       - name: Push changes 📌
         uses: ad-m/github-push-action@master
