--- a/.github/workflows/qa_test.yml
+++ b/.github/workflows/qa_test.yml
@@ -13,6 +13,9 @@ jobs:
 
       - name: Set up Python 🐍
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
       - name: Checkout 🛎️
         uses: actions/checkout@v4
 
