--- a/.github/workflows/sphinx_to_pages.yml
+++ b/.github/workflows/sphinx_to_pages.yml
@@ -7,12 +7,12 @@ on:
   workflow_call:
 
 jobs:
-  run-qa-tests:
+  run-quality-assurance:
     uses: ./.github/workflows/qa_test.yml
   build-pages:
     runs-on: ubuntu-latest
     needs:
-      - run-qa-tests
+      - run-quality-assurance
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -23,9 +23,8 @@ jobs:
 
       - name: Set up Python 🐍
         uses: actions/setup-python@v4
-
-      - name: Run Pre-Commit Tests 🧪
-        uses: pre-commit/action@v3.0.0
+        with:
+          python-version: 3.11
 
       - name: Build and Commit 🧱
         uses: sphinx-notes/pages@v3
