--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ jobs:
     needs:
       - build-pages
       - build-pdf
+    permissions:
+      pages: write
+      id-token: write
     steps:
 
       - name: Download Artifact PDF
