--- a/.github/workflows/sphinx_to_pages.yml
+++ b/.github/workflows/sphinx_to_pages.yml
@@ -29,3 +29,5 @@ jobs:
 
       - name: Build and Push Pages 🧱
         uses: sphinx-notes/pages@v3
+        with:
+          publish: ${{ (github.event_name != "push") && (github.event_name != "pull_request") }}
