--- a/.github/workflows/sphinx_to_pdf.yml
+++ b/.github/workflows/sphinx_to_pdf.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - run-quality-assurance
+    env:
+      var_test: ${{ (github.event_name }}
     steps:
 
       - name: Set up Python 🐍
