--- a/.github/workflows/sphinx_to_pdf.yml
+++ b/.github/workflows/sphinx_to_pdf.yml
@@ -14,7 +14,7 @@ jobs:
     needs:
       - run-quality-assurance
     env:
-      var_test: ${{ (github.event_name }}
+      var_test: ${{ github.event_name }}
     steps:
 
       - name: Set up Python 🐍
