--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,22 +23,6 @@ repos:
       - id: check-toml
       - id: fix-byte-order-marker
 
-  - repo: https://github.com/asottile/add-trailing-comma
-    rev: v3.1.0
-    hooks:
-      - id: add-trailing-comma
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files", "--force-single-line"]
-
-  - repo: https://github.com/psf/black
-    rev: 23.10.0
-    hooks:
-      - id: black
-
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
@@ -49,12 +33,6 @@ repos:
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
       - id: text-unicode-replacement-char
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
-    hooks:
-      - id: pyupgrade
-        args: [--py310-plus]
 
 #  - repo: https://github.com/Lucas-C/pre-commit-hooks-markup
 #    rev: v1.0.1
@@ -67,3 +45,10 @@ repos:
       - id: rstcheck
         additional_dependencies: ["rstcheck[sphinx,toml]"]
         args: ["--report-level=WARNING"]  # otherwise there is too much chatter
+
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: 'v0.1.7'
+    hooks:
+      - id: ruff-format
+      - id: ruff
+        args: ["--fix", "--exit-non-zero-on-fix"]
