only update website on release

--- a/.github/workflows/sphinx_to_pages.yml
+++ b/.github/workflows/sphinx_to_pages.yml
@@ -24,5 +24,6 @@ jobs:
 
       - name: Build and Push Pages 🧱
         uses: sphinx-notes/pages@v3
-        # publish: ${{ (github.event_name != 'push') && (github.event_name != 'pull_request') }}
-        # TODO: determine if our event is "release" or workflow_call
+        with:
+          publish: ${{ (github.event_name == 'workflow_call') || (github.event_name == 'release') }}
+        # determine if our event is "release" or workflow_call
