--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,15 +29,7 @@ jobs:
 
       - name: Download Artifact PDF
         uses: actions/download-artifact@v4
-#        with:
-#          name: "Trampolinturnen" # TODO: now all artifacts should be loaded and file is hopefully there
-
-      # TODO: debug
-      - name: Display structure of downloaded files
-        run: ls -R
-      - name: Display structure of downloaded files
-        run: ls -R
-        working-directory: "./Trampolinturnen"
+        # this will unpack zip, usable like below
 
       - name: Release
         uses: softprops/action-gh-release@v2
