--- a/.ruff.toml
+++ b/.ruff.toml
@@ -1,54 +1,19 @@
 line-length = 100
-target-version = "py310"
+target-version = "py313"
+output-format = "concise"
 
 [lint]
-select = [
-    "A",    # flake8-builtins
-    "ANN", # flake8-annotations
-    "ARG",  # flake8-unused-arguments
-    "B",    # Bugbear
-    "C",
-    "COM", # flake8-commas
-#    "CPY",  # flake8-copyright
-    "C4",   # flake8-comprehensions
-    "DTZ",  # flake8-datetimez
-#    "D",    # pydocstyle, TODO: activate
-    "E",    # pycodestyle errors
-    "ERA",  # eradicate commented out code
-    "F",    # pyflakes
-#    "FA",   # flake8-future-annotations
-#    "FBT",  # boolean traps
-    "FLY",  # flynt
-    "FURB", # refurb
-    "G",    # flake8-logging-format
-    "I",    # incomplete isort
-    "INP",  # flake8-no-pep420
-    "LOG",  # flake8-logging
-    "N",    # naming
-    "NPY",  # NumPy-specific rules
-    "PD",   # pandas-vet
-    "PERF", # Perflint
-    "PL",   # Pylint
-    "PTH",  # flake8-use-pathlib
-    "PYI",  # flake8-pyi
-    "RET",  # flake8-return
-    "RUF",  # Ruff-specific rules
-    "S",    # bandit, security
-    "SLF",  # flake8-self
-    "SIM",  # flake8-simplify
-    "TID",  # flake8-tidy-imports
-    "TCH",  # flake8-type-checking
-    "T10",  # flake8-print
-    "UP",   # pyupgrade
-    "W",    # pycodestyle warnings
-    "YTT",  # flake8-2020
-]
+select = ["ALL"]
 ignore = [
     "INP001", # namespace
     "A001", # shadowing
     "ERA001", # commented-out code
     "S605", "S607", # allow os.system
-    "COM812", # conflict with formatter
+    "TD002", "FIX002",  # TODOs
+    "COM812", "ISC001", # conflicts with formatter
+    "D203", "D212", "D213", "D214", "D215",  # conflicts with PEP257-convention (A)
+    "D404", "D405", "D406", "D407", "D408", "D409",  # conflicts with PEP257-convention (B)
+    "D410", "D411", "D413", "D415", "D416", "D417",  # conflicts with PEP257-convention (C)
 ]
 
 exclude= [  # external projects
