--- a/.github/workflows/sphinx_to_pages.yaml
+++ b/.github/workflows/sphinx_to_pages.yaml
@@ -6,10 +6,11 @@ on:
     branches: [main]
     # TODO: protect main - only rebuild on push or release
   workflow_call:
+  workflow_dispatch:
 
 jobs:
   run-quality-assurance:
-    uses: ./.github/workflows/qa_test.yml
+    uses: quality_assurance.yaml
   build-pages:
     runs-on: ubuntu-latest
     needs:
