--- a/.github/workflows/sphinx_to_pdf.yaml
+++ b/.github/workflows/sphinx_to_pdf.yaml
@@ -5,10 +5,11 @@ on:
   pull_request:
     branches: [main]
   workflow_call:
+  workflow_dispatch:
 
 jobs:
   run-quality-assurance:
-    uses: ./.github/workflows/qa_test.yml
+    uses: quality_assurance.yaml
   build-pdf:
     runs-on: ubuntu-latest
     needs:
