--- a/.github/workflows/sphinx_to_pages.yaml
+++ b/.github/workflows/sphinx_to_pages.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run-quality-assurance:
-    uses: quality_assurance.yaml
+    uses: ./.github/workflows/quality_assurance.yaml
   build-pages:
     runs-on: ubuntu-latest
     needs:
