--- a/.github/workflows/sphinx_to_pdf.yaml
+++ b/.github/workflows/sphinx_to_pdf.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   run-quality-assurance:
-    uses: quality_assurance.yaml
+    uses: ./.github/workflows/quality_assurance.yaml
   build-pdf:
     runs-on: ubuntu-latest
     needs:
